Update Pulumi preview commands to remove expect-no-changes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,8 @@ jobs:
       - run: npm install
       - uses: pulumi/actions@v4
       - run: cd infrastructure && pulumi login ${{ secrets.PULUMI_CLOUD_URL }} && cd ..
-      - run: cd infrastructure && pulumi preview --stack dev --non-interactive --expect-no-changes && cd ..
-      - run: cd infrastructure && pulumi preview --stack production --non-interactive --expect-no-changes && cd ..
+      - run: cd infrastructure && pulumi preview --stack dev --non-interactive && cd ..
+      - run: cd infrastructure && pulumi preview --stack production --non-interactive && cd ..
     env:
       PULUMI_CONFIG_PASSPHRASE: ${{ secrets.PULUMI_CONFIG_PASSPHRASE }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
