--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/node": "^22.5.0",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^8.53.0",
+    "@typescript-eslint/parser": "^8.53.0",
     "eslint": "^8.50.0",
     "eslint-config-next": "^14.2.0",
     "eslint-plugin-prettier": "^5.0.0",
