--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,79 +5,13 @@ on:
     branches: [main]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 22
-      - run: npm install
-      - run: npm run test
-      - run: npx prettier . --check
-      - run: npx eslint . --ext .ts,.tsx
-  infra:
-    runs-on: ubuntu-latest
-    outputs:
-      distributionId: ${{ steps.pulumi-outputs.outputs.distributionId }}
-      s3BucketUri: ${{ steps.pulumi-outputs.outputs.s3BucketUri }}
-      userPoolId: ${{ steps.pulumi-outputs.outputs.userPoolId }}
-      userPoolClientId: ${{ steps.pulumi-outputs.outputs.userPoolClientId }}
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 22
-      - run: npm install
-      - uses: pulumi/actions@v4
-      - run: cd infrastructure && pulumi login ${{ secrets.PULUMI_CLOUD_URL }} && cd ..
-      - run: cd infrastructure && pulumi up --stack dev --non-interactive --yes && cd ..
-      - id: pulumi-outputs
-        run: |
-          cd infrastructure
-          DISTRIBUTION_ID=$(pulumi stack output distributionId --stack dev)
-          S3_BUCKET_URI=$(pulumi stack output s3BucketUri --stack dev)
-          USER_POOL_ID=$(pulumi stack output userPoolId --stack dev)
-          USER_POOL_CLIENT_ID=$(pulumi stack output userPoolClientId --stack dev)
-          echo "distributionId=$DISTRIBUTION_ID" >> $GITHUB_OUTPUT
-          echo "s3BucketUri=$S3_BUCKET_URI" >> $GITHUB_OUTPUT
-          echo "userPoolId=$USER_POOL_ID" >> $GITHUB_OUTPUT
-          echo "userPoolClientId=$USER_POOL_CLIENT_ID" >> $GITHUB_OUTPUT
-    env:
-      PULUMI_CONFIG_PASSPHRASE: ${{ secrets.PULUMI_CONFIG_PASSPHRASE }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: "us-west-2"
-  build:
-    runs-on: ubuntu-latest
-    needs: [test, infra]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 22
-      - run: npm install
-      - run: npm run build
-        env:
-          NEXT_PUBLIC_COGNITO_USER_POOL_ID: ${{ needs.infra.outputs.userPoolId }}
-          NEXT_PUBLIC_COGNITO_CLIENT_ID: ${{ needs.infra.outputs.userPoolClientId }}
-      - run: zip -r build.zip out/*
-      - uses: actions/upload-artifact@v4
-        with:
-          name: build
-          path: build.zip
   deploy:
-    runs-on: ubuntu-latest
-    needs: [test, infra, build]
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: build
-      - run: unzip build.zip # puts it into top level folder "out"
-      - run: pip install awscli
-      - run: aws s3 sync --acl public-read --delete ./out ${{ needs.infra.outputs.s3BucketUri }}
-      - run: aws configure set preview.cloudfront true
-      - run: aws cloudfront create-invalidation --distribution-id ${{ needs.infra.outputs.distributionId }} --paths '/*'
-    env:
+    uses: ./.github/workflows/reusable-deploy.yml
+    with:
+      stack: dev
+      run-deploy: true
+    secrets:
+      PULUMI_CLOUD_URL: ${{ secrets.PULUMI_CLOUD_URL }}
+      PULUMI_CONFIG_PASSPHRASE: ${{ secrets.PULUMI_CONFIG_PASSPHRASE }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
