--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,19 +4,13 @@
     "es2021": true
   },
   "root": true,
-  "extends": [
-    "eslint:recommended",
-    "next/core-web-vitals"
-  ],
+  "extends": ["eslint:recommended", "next/core-web-vitals"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "prettier",
-    "@typescript-eslint"
-  ],
+  "plugins": ["prettier", "@typescript-eslint"],
   "rules": {
     "prettier/prettier": "error",
     "@typescript-eslint/no-unused-vars": [
