--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,6 +9,7 @@ jobs:
     uses: ./.github/workflows/reusable-deploy.yml
     with:
       stack: dev
+      environment: dev
       run-deploy: true
     secrets:
       PULUMI_CLOUD_URL: ${{ secrets.PULUMI_CLOUD_URL }}
