--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -5,8 +5,8 @@ on:
     branches: [main]
 
 jobs:
-  deploy:
-    uses: ./.github/workflows/reusable-deploy.yml
+  ci:
+    uses: ./.github/workflows/ci.yml
     with:
       stack: production
       environment: production
@@ -19,7 +19,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: [deploy]
+    needs: [ci]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
