--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emotion/styled": "^11.11.0",
+    "amazon-cognito-identity-js": "^6.3.16",
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -14,6 +15,8 @@
     "@types/node": "^22.5.0",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^8.53.0",
+    "@typescript-eslint/parser": "^8.53.0",
     "eslint": "^8.50.0",
     "eslint-config-next": "^14.2.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -24,6 +27,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:with-config": "./scripts/build-with-config.sh",
     "start": "next start",
     "test": "echo \"No tests configured\" && exit 0"
   }
