--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,19 @@
     "es2021": true
   },
   "root": true,
-  "extends": ["eslint:recommended", "next/core-web-vitals"],
+  "extends": [
+    "eslint:recommended",
+    "next/core-web-vitals"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["prettier", "@typescript-eslint"],
+  "plugins": [
+    "prettier",
+    "@typescript-eslint"
+  ],
   "rules": {
     "prettier/prettier": "error",
     "@typescript-eslint/no-unused-vars": [
@@ -18,6 +24,7 @@
       {
         "argsIgnorePattern": "^_"
       }
-    ]
+    ],
+    "no-undef": "off"
   }
 }
